@@ -1,3 +1,6 @@
+2011-03-06  Kostas Nakos  <knakos@gmail.com>
+* atari.[ch], android/*: Implemented autoframeskip functionality
+
 2011-02-13  Kostas Nakos  <knakos@gmail.com>
 * log.c, atari.c, screen.c, configure.ac, Makefile.in, android/*: Imported the
   android port
